Add service for uploading helm chart values and regenerate
