# pkg/api/v1/restapi/operations/apps/upload_app_values_responses.go
@@ -1,0 +1,96 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package apps
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	models "github.com/mahakamcloud/mahakam/pkg/api/v1/models"
+)
+
+// UploadAppValuesCreatedCode is the HTTP code returned for type UploadAppValuesCreated
+const UploadAppValuesCreatedCode int = 201
+
+/*UploadAppValuesCreated App values added
+
+swagger:response uploadAppValuesCreated
+*/
+type UploadAppValuesCreated struct {
+}
+
+// NewUploadAppValuesCreated creates UploadAppValuesCreated with default headers values
+func NewUploadAppValuesCreated() *UploadAppValuesCreated {
+
+	return &UploadAppValuesCreated{}
+}
+
+// WriteResponse to the client
+func (o *UploadAppValuesCreated) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.Header().Del(runtime.HeaderContentType) //Remove Content-Type on empty responses
+
+	rw.WriteHeader(201)
+}
+
+/*UploadAppValuesDefault error
+
+swagger:response uploadAppValuesDefault
+*/
+type UploadAppValuesDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewUploadAppValuesDefault creates UploadAppValuesDefault with default headers values
+func NewUploadAppValuesDefault(code int) *UploadAppValuesDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &UploadAppValuesDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the upload app values default response
+func (o *UploadAppValuesDefault) WithStatusCode(code int) *UploadAppValuesDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the upload app values default response
+func (o *UploadAppValuesDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the upload app values default response
+func (o *UploadAppValuesDefault) WithPayload(payload *models.Error) *UploadAppValuesDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the upload app values default response
+func (o *UploadAppValuesDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *UploadAppValuesDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
